--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/styles": "^4.2.0",
     "axios": "^0.19.0",
     "dexie": "^2.0.4",
     "google-maps-react": "^2.0.2",
-    "leaflet": "^1.5.1",
     "mdbreact": "^4.16.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-animated-slider": "^1.1.4",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
-    "react-leaflet": "^2.4.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
