--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-maps-react": "^2.0.2",
     "mdbreact": "^4.16.0",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-animated-slider": "^1.1.4",
     "react-document-title": "^2.0.3",
@@ -22,6 +23,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-switch": "^5.0.1",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
