--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "dexie": "^2.0.4",
     "google-maps-react": "^2.0.2",
+    "js-base64": "^2.5.1",
     "mdbreact": "^4.16.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
