--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@material-ui/styles": "^4.2.0",
     "axios": "^0.19.0",
     "dexie": "^2.0.4",
+    "dotenv": "^8.1.0",
     "google-maps-react": "^2.0.2",
     "js-base64": "^2.5.1",
+    "mapbox-gl": "^1.3.1",
     "mdbreact": "^4.16.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -22,6 +24,7 @@
     "react-coverflow": "^0.2.20",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.6",
+    "react-map-gl": "^5.0.11",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
