--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
@@ -14,6 +17,7 @@
     "axios": "^0.19.0",
     "dexie": "^2.0.4",
     "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
     "google-maps-react": "^2.0.2",
     "js-base64": "^2.5.1",
     "mdbreact": "^4.23.1",
@@ -34,7 +38,8 @@
     "recharts": "^1.8.5",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
