--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dexie": "^2.0.4",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^2.3.0",
     "google-maps-react": "^2.0.2",
     "js-base64": "^2.5.1",
     "mdbreact": "^4.23.1",
