--- a/package.json
+++ b/package.json
@@ -4,44 +4,47 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.28",
+    "@emotion/core": "^10.0.34",
     "@emotion/styled": "^10.0.27",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.8.0",
-    "@material-ui/styles": "^4.7.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
     "aes-js": "^3.1.2",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "dexie": "^2.0.4",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
-    "framer-motion": "^2.3.0",
-    "google-maps-react": "^2.0.2",
-    "js-base64": "^2.5.1",
-    "mdbreact": "^4.23.1",
-    "node-sass": "^4.13.0",
+    "framer-motion": "^2.4.2",
+    "google-maps-react": "^2.0.6",
+    "js-base64": "^2.6.4",
+    "mdbreact": "^4.27.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-animated-slider": "^1.1.4",
     "react-base64-downloader": "^2.1.6",
     "react-coverflow": "^0.2.20",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.12.0",
-    "react-map-gl": "^5.1.5",
-    "react-particles-js": "^2.7.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
+    "react-dom": "^16.13.1",
+    "react-github-btn": "^1.2.0",
+    "react-joyride": "^2.2.1",
+    "react-map-gl": "^5.2.7",
+    "react-particles-js": "^3.3.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
-    "react-spring-3d-carousel": "^1.1.4",
+    "react-select": "^3.1.0",
+    "react-spring-3d-carousel": "^1.2.0",
     "react-switch": "^5.0.1",
     "recharts": "^1.8.5",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "uuid": "^8.2.0"
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
